Tweak how form note right is aligned (fix double float issue)

--- a/frontend/assets/stylesheets/base/_form.scss
+++ b/frontend/assets/stylesheets/base/_form.scss
@@ -121,7 +121,7 @@ form {
 }
 
 .form-note--right {
-    float: right;
+    text-align: right;
     margin-left: rem($gs-gutter);
 }
 
